--- a/static/sass/_stanford.scss
+++ b/static/sass/_stanford.scss
@@ -10,8 +10,8 @@
 //-----------------
 
 //Cardinal Color Variables
-$cardinal-red: #8C1515;
-$dark-red: #820000; //Link Color
+$cardinal-red: #000082;
+$dark-red: #000082; //Link Color
 $cardinal-light: #c83737; //Selected Header BG Color, ie. calendar        ***Custom, not from palette***
 $cardinal-bg: #e9afaf; //Selected Content BG Color, ie. calendar          ***Custom, not from palette***
 
