--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -10,6 +10,6 @@ If you didn't request this change, you can disregard this email - we have not ye
 
 {% trans "Thanks for using our site!" %}
 
-{% blocktrans %}The Stanford Online Team{% endblocktrans %}
+{% blocktrans %}The Nanoleanning Team{% endblocktrans %}
 
 {% endautoescape %}
