changes in color logo in the stanford theme

--- a/static/sass/_stanford.scss
+++ b/static/sass/_stanford.scss
@@ -10,8 +10,8 @@
 //-----------------
 
 //Cardinal Color Variables
-$cardinal-red: #A3DBE8;
-$dark-red: #A3DBE8; //Link Color
+$cardinal-red: #8C1515;
+$dark-red: #820000; //Link Color
 $cardinal-light: #4599C3; //Selected Header BG Color, ie. calendar        ***Custom, not from palette***
 $cardinal-bg: #4599C3; //Selected Content BG Color, ie. calendar          ***Custom, not from palette***
 
@@ -187,7 +187,7 @@ $homepage-bg-image: '../themes/stanford/images/applied_pano.jpg';
 $login-banner-image: none;
 $register-banner-image: none;
 
-$video-thumb-url: '../themes/stanford/images/applied-logo.png';
+$video-thumb-url: '../themes/stanford/images/AMATbug_blue.png';
 
 //-----------------
 //  Mixin Styles
