--- a/templates/static_templates/theme-about.html
+++ b/templates/static_templates/theme-about.html
@@ -40,31 +40,19 @@
 
 <section class="container about" style="width: auto;">
   <nav id="about-menu">
-    <a href="#about" class="about active">About</a>
+
     <a href="#faq" class="faq">Faq</a>
-    <a href="#careers" class="careers">Careers</a>
-    <a href="#contact" class="contact">Contact</a>
   </nav>
 
   <section class="vision">
 
-## About Section ##
-    <section class="message left" id="about">
-      <div class="photo">
-        <img src="${static.url('themes/stanford/images/quad.jpg')}" alt="Stanford Quad with Hoover Tower" />
-          <!-- Image Copyright owned by Giulio Gratta -->
-      </div>
-      <article>
-        <h2>&nbsp;</h2>
-      </article>
-      <hr class="fade-right-hr-divider">
-    </section>
+
 
 
 ## FAQ Section ##
     <section class="message left" id="faq">
       <div class="photo">
-        <img src="${static.url('themes/stanford/images/memchu.jpg')}" alt="Stanford Memorial Church Facade" />
+        <img src="${static.url('themes/stanford/images/applied-logo.png')}" alt="Stanford Memorial Church Facade" />
           <!-- Image Copyright owned by Giulio Gratta -->
       </div>
       <article>
@@ -81,43 +69,9 @@
     </section>
 
 
-## Careers Section ##
-    <section class="message left" id="careers">
-      <div class="photo">
-        <img src="${static.url('themes/stanford/images/tree-light.jpg')}" alt="Stanford Quad with Hoover Tower" />
-          <!-- Image Copyright owned by Giulio Gratta -->
-      </div>
-      <article>
-        <h2>&nbsp;</h2>
-      </article>
-      <hr class="fade-right-hr-divider">
-    </section>
 
 
 ## Contact Section ##
-    <section class="message left" id="contact">
-      <div class="photo">
-        <img src="${static.url('themes/stanford/images/dish.jpg')}" alt="Stanford Dish by Twilight" />
-          <!-- Image Copyright owned by Stanford University -->
-      </div>
-      <article id="stanford-OpenEdX-contact">
-        <h2>&nbsp;</h2>
-        <h2>&nbsp;</h2>
-      </article>
-      <script>
-        $(function() {
-          var ua = navigator.userAgent;
-          
-          $('#stanford-OpenEdX-contact a').each(function() {
-            var href = $(this).attr('href') + "?body=User Agent String: " + ua + " (Please do not delete, this text helps us help you. - Stanford OpenEdX Team)";
-            if (!$(this).hasClass('external')) {
-              $(this).attr('href', href);
-            }
-          });
-        });
-      </script>
-      <hr class="fade-right-hr-divider">
-    </section>
-  </section>
+ 
 
 </section>
