--- a/templates/theme-header.html
+++ b/templates/theme-header.html
@@ -1,11 +1,16 @@
 ## mako
-
+<%! from django.core.urlresolvers import reverse %>
+<%namespace name='static' file='/static_content.html'/>
+<%inherit file="/navigation.html"/>
 
 ## Toss the Stanford brand bar on top of the page
 <%block name="navigation_top">
-
 </%block>
 
+## TODO: this will eventually be moved to the Sass
+<%block name="navigation_logo">
+  <img src="${static.url('themes/stanford/images/applied-S-logo.png')}" height="35" alt="Home Page" />
+</%block>
 
 ## We don't want extra links inside the navigation dropdown
 <%block name="navigation_dropdown_menu_links" />
@@ -26,4 +31,5 @@
     <a href="${marketing_link('COURSES')}">Find Courses</a>
   </li>
 </%block>
+
 
