--- a/static/sass/_stanford.scss
+++ b/static/sass/_stanford.scss
@@ -182,7 +182,7 @@ $footer_margin: ($baseline/4) 0;
 //-----------------
 //  CSS BG Images
 //-----------------
-$homepage-bg-image: '../themes/stanford/images/applied_pano.jpg';
+$homepage-bg-image: url('../themes/stanford/images/applied_pano.jpg');
 
 $login-banner-image: none;
 $register-banner-image: none;
