--- a/templates/static_templates/theme-about.html
+++ b/templates/static_templates/theme-about.html
@@ -3,7 +3,7 @@
 
 <%inherit file="/main.html" />
 
-<%block name="title"><title>About Stanford Online</title></%block>
+<%block name="title"><title>About Applied Materials</title></%block>
 
 <%block name="js_extra">
   <script type="text/javascript">
@@ -52,7 +52,7 @@
 ## FAQ Section ##
     <section class="message left" id="faq">
       <div class="photo">
-        <img src="${static.url('themes/stanford/images/applied-logo.png')}" alt="Stanford Memorial Church Facade" />
+        <img src="${static.url('themes/stanford/images/nanolearning-logo.png')}" alt="Nano Learning Logo" />
           <!-- Image Copyright owned by Giulio Gratta -->
       </div>
       <article>
