--- a/templates/static_templates/theme-faq.html
+++ b/templates/static_templates/theme-faq.html
@@ -3,7 +3,7 @@
 
 <%inherit file="/main.html" />
 
-<%block name="title"><title>Stanford Online Help</title></%block>
+<%block name="title"><title>Applied Materials Help</title></%block>
 
 <section class="container about" style="width: auto;">
   <nav id="about-menu">
